<resources>
    <string name="app_name">Sortem</string>
    <string name="title">SORTEM !</string>
    <string name="selectArraySize">Please enter the desired array size and click on the type of list you want to generate to compare the speed of each sorting algorithm.</string>
    <string name="hint">10\'000</string>
    <string name="sortedButton">Sorted list</string>
    <string name="unsortedButton">Random list</string>
    <string name="algoName">NAME OF THE SORTING ALGORITHM</string>
    <string name="time">0 ms</string>
    <string name="currentAlgoName">Algorithm name</string>
    <string name="currentAlgoTime">0.0 secs</string>
</resources>