<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/selectArraySize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/selectArraySize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <EditText
        android:id="@+id/arraySize"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint"
        android:inputType="number"
        app:layout_constraintEnd_toStartOf="@+id/sortedButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectArraySize" />

    <Button
        android:id="@+id/sortedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sortedButton"
        app:layout_constraintEnd_toStartOf="@+id/randomButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/arraySize"
        app:layout_constraintTop_toBottomOf="@+id/selectArraySize" />

    <Button
        android:id="@+id/randomButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/unsortedButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/sortedButton"
        app:layout_constraintTop_toBottomOf="@+id/selectArraySize" />

    <TextView
        android:id="@+id/algoName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/currentAlgoName"
        app:layout_constraintEnd_toStartOf="@+id/timer"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectArraySize"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/currentAlgoTime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/algoName"
        app:layout_constraintTop_toBottomOf="@+id/selectArraySize"
        android:visibility="invisible"/>

        <ListView
            android:id="@+id/listView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/arraySize" />

</androidx.constraintlayout.widget.ConstraintLayout>